Fixed z-index

--- a/src/assets/scss/blocks/room-table/room-table.scss
+++ b/src/assets/scss/blocks/room-table/room-table.scss
@@ -2,6 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 15;
 
   box-sizing: border-box;
   width: 245px;
@@ -16,7 +17,7 @@
   z-index: 2;
 
   &:not(:first-of-type) {
-    margin-top: 16px;
+    margin-top: 20px;
   }
 
   &__info {
@@ -34,6 +35,7 @@
   }
 
   &__capacity {
+    display: block;
     margin-top: 2px;
 
     line-height: 17px;
@@ -77,5 +79,36 @@
   display: grid;
   width: calc(100vw - 245px);
   min-width: 1040px;
+  padding-top: 46px;
+
+  cursor: pointer;
+
+  grid-auto-rows: 36px;
+  grid-gap: 24px 0;
   grid-template-columns: 0.5fr repeat(15, 1fr) 0.5fr;
+
+  .room-line {
+    display: grid;
+
+    background-color: #ffffff;
+
+    grid-column: 2/-2;
+    grid-template-columns: repeat(60, 0.25fr);
+
+    .hour-15 {
+      background-color: #d5dfe9;
+
+      grid-column: 1/-1;
+    }
+
+    .hour {
+      background-color: #d5dfe9;
+
+      grid-column: 1/5;
+    }
+
+    // &:nth-of-type(2) {
+    //   background-color: #d5dfe9;
+    // }
+  }
 }
