--- a/src/assets/scss/blocks/time-line/time-line.scss
+++ b/src/assets/scss/blocks/time-line/time-line.scss
@@ -84,8 +84,6 @@
   }
 
   &__row {
-    height: 28px;
-
     background-color: #d5dfe9;
 
     grid-column: 1/-1;
